--- a/index.html
+++ b/index.html
@@ -36,18 +36,17 @@
                         <a href="" class="nav-link link">Contacts</a>
                     </li>
                 </ul>
+                <address class="address">
+                    <ul class="header-address list">
+                        <li>
+                            <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
+                        </li>
+                        <li>
+                            <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
+                        </li>
+                    </ul>
+                </address>
             </nav>
-        
-            <address class="address">
-                <ul class="header-address list">
-                    <li>
-                        <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
-                    </li>
-                </ul>
-            </address>
         </div>
     </header>
     <main>
@@ -62,7 +61,7 @@
         <section class="features-section">
             <div class="container">
                 <h2 hidden>Features</h2>
-                <ul class="list">
+                <ul class="list section-features">
                     <li>
                         <h3 class="general-section-title">Strategy</h3>
                         <p class="section-text">
