--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         <section>
             <div class="container">
                 <h1 hidden>Portfolio page</h1>
-                <ul class="list">
+                <ul class="list prt-btn">
                     <li>
                         <button type="button" class="portfolio-btn">All</button>
                     </li>
