--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class="features-section">
             <div class="container">
                 <h2 hidden>Features</h2>
-                <ul class="list section-features">
+                <ul class="list section-features section">
                     <li>
                         <h3 class="general-section-title">Strategy</h3>
                         <p class="section-text">
@@ -94,7 +94,7 @@
         <section>
             <div class="container">
                 <h2 id="portfolio" class="section-what-title">What are we doing</h2>
-                <ul class="list">
+                <ul class="list section-what section">
                     <li>
                         <img src="./images/portfolio/img-1.jpg" width="360" height="300" alt="PC monitor" />
                     </li>
@@ -111,7 +111,7 @@
         <section class="section-team">
             <div class="container">
                 <h2 id="team" class="section-team-title">Our Team</h2>
-                <ul class="list">
+                <ul class="list team-section section">
                     <li class="team-back">
                         <img src="./images/team/img-1.jpg" width="264" height="260" alt="The fist member of team" />
                         <h3 class="general-section-title">Mark Guerrero</h3>
