--- a/index.html
+++ b/index.html
@@ -21,129 +21,134 @@
 </head>
 <body>
     <!--Header section-->
-    <header>
-        <div class="container">
-            <nav class="header-nav">
-                <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
-                <ul class="list header-link">
-                    <li>
-                        <a href="./index.html" class="nav-link link">Studio</a>
-                    </li>
-                    <li>
-                        <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="" class="nav-link link">Contacts</a>
-                    </li>
-                </ul>
-                <address class="address">
-                    <ul class="header-address list">
+    <div class="page-container">
+        <header>
+            <div class="container">
+                <nav class="header-nav">
+                    <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
+                    <ul class="list header-link">
                         <li>
-                            <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
+                            <a href="./index.html" class="nav-link link">Studio</a>
                         </li>
                         <li>
-                            <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
+                            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="" class="nav-link link">Contacts</a>
                         </li>
                     </ul>
-                </address>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <!--Hero section-->
-        <section class="hero-section">
-            <div class="container">
-                <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                <button type="button" class="hero-btn">Order Service</button>
+                    <address class="address">
+                        <ul class="header-address list">
+                            <li>
+                                <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </nav>
             </div>
-        </section>
-        <!--Features-->
-        <section class="features-section">
+        </header>
+        <main>
+            <!--Hero section-->
+            <section class="hero-section">
+                <div class="container">
+                    <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                    <button type="button" class="hero-btn">Order Service</button>
+                </div>
+            </section>
+            <!--Features-->
+            <section class="features-section">
+                <div class="container">
+                    <h2 hidden>Features</h2>
+                    <ul class="list section-features section">
+                        <li>
+                            <h3 class="general-section-title">Strategy</h3>
+                            <p class="section-text">
+                                Our goal is to identify the business
+                                problem to walk away with the perfect and creative solution.
+                            </p>
+                        </li>
+                        <li>
+                            <h3 class="general-section-title">Punctuality</h3>
+                            <p class="section-text">
+                                Bring the key message to the brand's audience for the best price within the shortest possible
+                                time.
+                            </p>
+                        </li>
+                        <li>
+                            <h3 class="general-section-title">Diligence</h3>
+                            <p class="section-text">
+                                Research and confirm brands that present the strongest digital growth opportunities and minimize
+                                risk.
+                            </p>
+                        </li>
+                        <li>
+                            <h3 class="general-section-title">Technologies</h3>
+                            <p class="section-text">
+                                Design practice focused on digital experiences. We bring forth a deep passion for
+                                problem-solving.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!--What are we doing-->
+            <section>
+                <div class="container">
+                    <h2 id="portfolio" class="section-what-title">What are we doing</h2>
+                    <ul class="list section-what section">
+                        <li>
+                            <img src="./images/portfolio/img-1.jpg" width="360" height="300" alt="PC monitor" />
+                        </li>
+                        <li>
+                            <img src="./images/portfolio/img-2.jpg" width="360" height="300" alt="Chats on the phone" />
+                        </li>
+                        <li>
+                            <img src="./images/portfolio/img-3.jpg" width="360" height="300" alt="Phone display" />
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!--Team-->
+            <section class="section-team">
+                <div class="container">
+                    <h2 id="team" class="section-team-title">Our Team</h2>
+                    <ul class="list team-section section">
+                        <li class="team-back">
+                            <img src="./images/team/img-1.jpg" width="264" height="260" alt="The fist member of team" />
+                            <h3 class="general-section-title">Mark Guerrero</h3>
+                            <p class="section-text">Product Designer</p>
+                        </li>
+                        <li class="team-back">
+                            <img src="./images/team/img-2.jpg" width="264" height="260" alt="The second member of team" />
+                            <h3 class="general-section-title">Tom Ford</h3>
+                            <p class="section-text">Frontend Developer</p>
+                        </li>
+                        <li class="team-back">
+                            <img src="./images/team/img-3.jpg" width="264" height="260" alt="The third member of team" />
+                            <h3 class="general-section-title">Camila Garcia</h3>
+                            <p class="section-text">Marketing</p>
+                        </li>
+                        <li class="team-back">
+                            <img src="./images/team/img-4.jpg" width="264" height="260" alt="The fourth member of team" />
+                            <h3 class="general-section-title">Daniel Wilson</h3>
+                            <p class="section-text">UI Designer</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </main>
+        <!--Footer section-->
+        <footer class="footer">
             <div class="container">
-                <h2 hidden>Features</h2>
-                <ul class="list section-features section">
-                    <li>
-                        <h3 class="general-section-title">Strategy</h3>
-                        <p class="section-text">
-                            Our goal is to identify the business
-                            problem to walk away with the perfect and creative solution.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="general-section-title">Punctuality</h3>
-                        <p class="section-text">
-                            Bring the key message to the brand's audience for the best price within the shortest possible time.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="general-section-title">Diligence</h3>
-                        <p class="section-text">
-                            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="general-section-title">Technologies</h3>
-                        <p class="section-text">
-                            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                        </p>
-                    </li>
-                </ul>
+                <a href="./index.html" class="logo link">Web<span class="studio-down">Studio</span></a>
+                <p class="footer-paragraph">
+                    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                </p>
             </div>
-        </section>
-        <!--What are we doing-->
-        <section>
-            <div class="container">
-                <h2 id="portfolio" class="section-what-title">What are we doing</h2>
-                <ul class="list section-what section">
-                    <li>
-                        <img src="./images/portfolio/img-1.jpg" width="360" height="300" alt="PC monitor" />
-                    </li>
-                    <li>
-                        <img src="./images/portfolio/img-2.jpg" width="360" height="300" alt="Chats on the phone" />
-                    </li>
-                    <li>
-                        <img src="./images/portfolio/img-3.jpg" width="360" height="300" alt="Phone display" />
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!--Team-->
-        <section class="section-team">
-            <div class="container">
-                <h2 id="team" class="section-team-title">Our Team</h2>
-                <ul class="list team-section section">
-                    <li class="team-back">
-                        <img src="./images/team/img-1.jpg" width="264" height="260" alt="The fist member of team" />
-                        <h3 class="general-section-title">Mark Guerrero</h3>
-                        <p class="section-text">Product Designer</p>
-                    </li>
-                    <li class="team-back">
-                        <img src="./images/team/img-2.jpg" width="264" height="260" alt="The second member of team" />
-                        <h3 class="general-section-title">Tom Ford</h3>
-                        <p class="section-text">Frontend Developer</p>
-                    </li>
-                    <li class="team-back">
-                        <img src="./images/team/img-3.jpg" width="264" height="260" alt="The third member of team" />
-                        <h3 class="general-section-title">Camila Garcia</h3>
-                        <p class="section-text">Marketing</p>
-                    </li>
-                    <li class="team-back">
-                        <img src="./images/team/img-4.jpg" width="264" height="260" alt="The fourth member of team" />
-                        <h3 class="general-section-title">Daniel Wilson</h3>
-                        <p class="section-text">UI Designer</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </main>
-    <!--Footer section-->
-    <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo link">Web<span class="studio-down">Studio</span></a>
-            <p class="footer-paragraph">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
