--- a/portfolio.html
+++ b/portfolio.html
@@ -18,135 +18,138 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body class="body">
-    <header>
-        <div class="container">
-            <nav  class="header-nav">
-                <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
-                <ul class="list header-link">
-                    <li>
-                        <a href="./index.html" class="nav-link link">Studio</a>
-                    </li>
-                    <li>
-                        <a href="./portfolio.html" class="nav-link link">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="" class="nav-link link">Contacts</a>
-                    </li>
-                </ul>
-                <address class="address">
-                    <ul class="header-address list">
+    <div class="page-container">
+        <header>
+            <div class="container">
+                <nav class="header-nav">
+                    <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
+                    <ul class="list header-link">
                         <li>
-                            <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
+                            <a href="./index.html" class="nav-link link">Studio</a>
                         </li>
                         <li>
-                            <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
+                            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="" class="nav-link link">Contacts</a>
                         </li>
                     </ul>
-                </address>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <!--Portfolio page-->
-        <section>
-            <div class="container">
-                <h1 hidden>Portfolio page</h1>
-                <ul class="list prt-btn">
-                    <li>
-                        <button type="button" class="portfolio-btn">All</button>
-                    </li>
-                    <li>
-                        <button type="button" class="portfolio-btn">Web Site</button>
-                    </li>
-                    <li>
-                        <button type="button" class="portfolio-btn">App</button>
-                    </li>
-                    <li>
-                        <button type="button" class="portfolio-btn">Design</button>
-                    </li>
-                    <li>
-                        <button type="button" class="portfolio-btn">Marketing</button>
-                    </li>
-                </ul>
-                <!--Row 1-->
-                <ul class="list">
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-1.jpg" alt="App's interface" width="360" height="300" />
-                            <h2 class="general-section-title">Banking App Interface Concept</h2>
-                            <p class="section-text">App</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-2.jpg" alt="Phone payment" width="360" height="300" />
-                            <h2 class="general-section-title">Cashless Payment</h2>
-                            <p class="section-text">Marketing</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-3.jpg" alt="Laptop and phone" width="360" height="300" />
-                            <h2 class="general-section-title">Meditation App</h2>
-                            <p class="section-text">App</p>
-                        </a>
-                    </li>
-                    <!--Row 2-->
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-4.jpg" alt="Vehicle interior" width="360" height="300" />
-                            <h2 class="general-section-title">Taxi Service</h2>
-                            <p class="section-text">Marketing</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-5.jpg" alt="Different illustrations in the phone" width="360" height="300" />
-                            <h2 class="general-section-title">Screen Illustrations</h2>
-                            <p class="section-text">Design</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-6.jpg" alt="The girl in headphones" width="360" height="300" />
-                            <h2 class="general-section-title">Online Courses</h2>
-                            <p class="section-text">Marketing</p>
-                        </a>
-                    </li>
-                    <!--Row 3-->
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-7.jpg" alt="Different layouts" width="360" height="300" />
-                            <h2 class="general-section-title">Instagram Stories Concept</h2>
-                            <p class="section-text">Design</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-8.jpg" alt="The person with a bag  of fruits and vegetables" width="360"
-                                height="300" />
-                            <h2 class="general-section-title">Organic Food</h2>
-                            <p class="section-text">Web Site</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link">
-                            <img src="./images/page-2/img-9.jpg" alt="Barista is making coffee" width="360" height="300" />
-                            <h2 class="general-section-title">Fresh Coffee</h2>
-                            <p class="section-text">Web Site</p>
-                        </a>
-                    </li>
-                </ul>
+                    <address class="address">
+                        <ul class="header-address list">
+                            <li>
+                                <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </nav>
             </div>
-        </section>
-    </main>
-    <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo link">Web<span class="studio-down">Studio</span></a>
-            <p class="footer-paragraph">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
-        </div>
-    </footer>
+        </header>
+        <main>
+            <!--Portfolio page-->
+            <section>
+                <div class="container">
+                    <h1 hidden>Portfolio page</h1>
+                    <ul class="list prt-btn">
+                        <li>
+                            <button type="button" class="portfolio-btn">All</button>
+                        </li>
+                        <li>
+                            <button type="button" class="portfolio-btn">Web Site</button>
+                        </li>
+                        <li>
+                            <button type="button" class="portfolio-btn">App</button>
+                        </li>
+                        <li>
+                            <button type="button" class="portfolio-btn">Design</button>
+                        </li>
+                        <li>
+                            <button type="button" class="portfolio-btn">Marketing</button>
+                        </li>
+                    </ul>
+                    <!--Row 1-->
+                    <ul class="list card">
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-1.jpg" alt="App's interface" width="360" height="300" />
+                                <h2 class="general-section-title">Banking App Interface Concept</h2>
+                                <p class="section-text">App</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-2.jpg" alt="Phone payment" width="360" height="300" />
+                                <h2 class="general-section-title">Cashless Payment</h2>
+                                <p class="section-text">Marketing</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-3.jpg" alt="Laptop and phone" width="360" height="300" />
+                                <h2 class="general-section-title">Meditation App</h2>
+                                <p class="section-text">App</p>
+                            </a>
+                        </li>
+                        <!--Row 2-->
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-4.jpg" alt="Vehicle interior" width="360" height="300" />
+                                <h2 class="general-section-title">Taxi Service</h2>
+                                <p class="section-text">Marketing</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-5.jpg" alt="Different illustrations in the phone" width="360"
+                                    height="300" />
+                                <h2 class="general-section-title">Screen Illustrations</h2>
+                                <p class="section-text">Design</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-6.jpg" alt="The girl in headphones" width="360" height="300" />
+                                <h2 class="general-section-title">Online Courses</h2>
+                                <p class="section-text">Marketing</p>
+                            </a>
+                        </li>
+                        <!--Row 3-->
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-7.jpg" alt="Different layouts" width="360" height="300" />
+                                <h2 class="general-section-title">Instagram Stories Concept</h2>
+                                <p class="section-text">Design</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-8.jpg" alt="The person with a bag  of fruits and vegetables"
+                                    width="360" height="300" />
+                                <h2 class="general-section-title">Organic Food</h2>
+                                <p class="section-text">Web Site</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="link">
+                                <img src="./images/page-2/img-9.jpg" alt="Barista is making coffee" width="360" height="300" />
+                                <h2 class="general-section-title">Fresh Coffee</h2>
+                                <p class="section-text">Web Site</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <a href="./index.html" class="logo link">Web<span class="studio-down">Studio</span></a>
+                <p class="footer-paragraph">
+                    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                </p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
