--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!--Header section-->
     <div class="page-container">
-        <header>
+        <header class="header">
             <div class="container">
                 <nav class="header-nav">
                     <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
