--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 </head>
 <body class="body">
     <div class="page-container">
-        <header>
+        <header class="header">
             <div class="container">
                 <nav class="header-nav">
                     <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
