--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <!--Features-->
             <section class="features-section">
                 <div class="container">
-                    <h2 hidden>Features</h2>
+                    <h2 .visually-hidden>Features</h2>
                     <ul class="list section-features section">
-                        <li>
+                        <li class="features-first">
                             <h3 class="general-section-title">Strategy</h3>
                             <p class="section-text">
                                 Our goal is to identify the business
@@ -99,7 +99,7 @@
                 <div class="container">
                     <h2 id="portfolio" class="section-what-title">What are we doing</h2>
                     <ul class="list section-what section">
-                        <li>
+                        <li class="what-first">
                             <img src="./images/portfolio/img-1.jpg" width="360" height="300" alt="PC monitor" />
                         </li>
                         <li>
@@ -116,25 +116,33 @@
                 <div class="container">
                     <h2 id="team" class="section-team-title">Our Team</h2>
                     <ul class="list team-section section">
-                        <li class="team-back">
+                        <li class="team-back team-first">
                             <img src="./images/team/img-1.jpg" width="264" height="260" alt="The fist member of team" />
-                            <h3 class="general-section-title">Mark Guerrero</h3>
-                            <p class="section-text">Product Designer</p>
+                            <div class="container-team">
+                                <h3 class="general-section-title worker-title">Mark Guerrero</h3>
+                                <p class="section-text team-text">Product Designer</p>
+                            </div>
                         </li>
                         <li class="team-back">
                             <img src="./images/team/img-2.jpg" width="264" height="260" alt="The second member of team" />
-                            <h3 class="general-section-title">Tom Ford</h3>
-                            <p class="section-text">Frontend Developer</p>
+                            <div class="container-team">
+                                <h3 class="general-section-title worker-title">Tom Ford</h3>
+                                <p class="section-text team-text">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="team-back">
                             <img src="./images/team/img-3.jpg" width="264" height="260" alt="The third member of team" />
-                            <h3 class="general-section-title">Camila Garcia</h3>
-                            <p class="section-text">Marketing</p>
+                            <div class="container-team">
+                                <h3 class="general-section-title worker-title">Camila Garcia</h3>
+                                <p class="section-text team-text">Marketing</p>
+                            </div>
                         </li>
                         <li class="team-back">
                             <img src="./images/team/img-4.jpg" width="264" height="260" alt="The fourth member of team" />
-                            <h3 class="general-section-title">Daniel Wilson</h3>
-                            <p class="section-text">UI Designer</p>
+                            <div class="container-team">
+                                <h3 class="general-section-title worker-title">Daniel Wilson</h3>
+                                <p class="section-text team-text">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +151,7 @@
         <!--Footer section-->
         <footer class="footer">
             <div class="container">
-                <a href="./index.html" class="logo link">Web<span class="studio-down">Studio</span></a>
+                <a href="./index.html" class="logo link footer-link">Web<span class="studio-down">Studio</span></a>
                 <p class="footer-paragraph">
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
