--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             <!--Portfolio page-->
             <section>
                 <div class="container">
-                    <h1 hidden>Portfolio page</h1>
+                    <h1 .visually-hidden>Portfolio page</h1>
                     <ul class="list prt-btn">
                         <li>
                             <button type="button" class="portfolio-btn">All</button>
@@ -144,7 +144,7 @@
         </main>
         <footer class="footer">
             <div class="container">
-                <a href="./index.html" class="logo link">Web<span class="studio-down">Studio</span></a>
+                <a href="./index.html" class="logo link footer-link">Web<span class="studio-down">Studio</span></a>
                 <p class="footer-paragraph">
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
