--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!--Features-->
             <section class="features-section">
                 <div class="container">
-                    <h2 .visually-hidden>Features</h2>
+                    <h2 visually-hidden>Features</h2>
                     <ul class="list section-features section">
                         <li class="features-first">
                             <h3 class="general-section-title">Strategy</h3>
