--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             <!--Portfolio page-->
             <section>
                 <div class="container">
-                    <h1 .visually-hidden>Portfolio page</h1>
+                    <h1 visually-hidden>Portfolio page</h1>
                     <ul class="list prt-btn">
                         <li>
                             <button type="button" class="portfolio-btn">All</button>
