--- a/index.html
+++ b/index.html
@@ -61,30 +61,30 @@
             <!--Features-->
             <section class="features-section">
                 <div class="container">
-                    <h2 visually-hidden>Features</h2>
+                    <h2 class="visually-hidden">Features</h2>
                     <ul class="list section-features section">
-                        <li class="features-first">
+                        <li class="features-li">
                             <h3 class="general-section-title">Strategy</h3>
                             <p class="section-text">
                                 Our goal is to identify the business
                                 problem to walk away with the perfect and creative solution.
                             </p>
                         </li>
-                        <li>
+                        <li class="features-li">
                             <h3 class="general-section-title">Punctuality</h3>
                             <p class="section-text">
                                 Bring the key message to the brand's audience for the best price within the shortest possible
                                 time.
                             </p>
                         </li>
-                        <li>
+                        <li class="features-li">
                             <h3 class="general-section-title">Diligence</h3>
                             <p class="section-text">
                                 Research and confirm brands that present the strongest digital growth opportunities and minimize
                                 risk.
                             </p>
                         </li>
-                        <li>
+                        <li class="features-li">
                             <h3 class="general-section-title">Technologies</h3>
                             <p class="section-text">
                                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -95,17 +95,17 @@
                 </div>
             </section>
             <!--What are we doing-->
-            <section>
+            <section class="main-what-section">
                 <div class="container">
                     <h2 id="portfolio" class="section-what-title">What are we doing</h2>
                     <ul class="list section-what section">
-                        <li class="what-first">
+                        <li class="what-li">
                             <img src="./images/portfolio/img-1.jpg" width="360" height="300" alt="PC monitor" />
                         </li>
-                        <li>
+                        <li class="what-li">
                             <img src="./images/portfolio/img-2.jpg" width="360" height="300" alt="Chats on the phone" />
                         </li>
-                        <li>
+                        <li class="what-li">
                             <img src="./images/portfolio/img-3.jpg" width="360" height="300" alt="Phone display" />
                         </li>
                     </ul>
@@ -116,28 +116,28 @@
                 <div class="container">
                     <h2 id="team" class="section-team-title">Our Team</h2>
                     <ul class="list team-section section">
-                        <li class="team-back team-first">
+                        <li class="team-back team-li">
                             <img src="./images/team/img-1.jpg" width="264" height="260" alt="The fist member of team" />
                             <div class="container-team">
                                 <h3 class="general-section-title worker-title">Mark Guerrero</h3>
                                 <p class="section-text team-text">Product Designer</p>
                             </div>
                         </li>
-                        <li class="team-back">
+                        <li class="team-back team-li">
                             <img src="./images/team/img-2.jpg" width="264" height="260" alt="The second member of team" />
                             <div class="container-team">
                                 <h3 class="general-section-title worker-title">Tom Ford</h3>
                                 <p class="section-text team-text">Frontend Developer</p>
                             </div>
                         </li>
-                        <li class="team-back">
+                        <li class="team-back team-li">
                             <img src="./images/team/img-3.jpg" width="264" height="260" alt="The third member of team" />
                             <div class="container-team">
                                 <h3 class="general-section-title worker-title">Camila Garcia</h3>
                                 <p class="section-text team-text">Marketing</p>
                             </div>
                         </li>
-                        <li class="team-back">
+                        <li class="team-back team-li">
                             <img src="./images/team/img-4.jpg" width="264" height="260" alt="The fourth member of team" />
                             <div class="container-team">
                                 <h3 class="general-section-title worker-title">Daniel Wilson</h3>
