--- a/portfolio.html
+++ b/portfolio.html
@@ -49,9 +49,9 @@
         </header>
         <main>
             <!--Portfolio page-->
-            <section>
+            <section class="portfolio-section">
                 <div class="container">
-                    <h1 visually-hidden>Portfolio page</h1>
+                    <h1 class="visually-hidden">Portfolio page</h1>
                     <ul class="list prt-btn">
                         <li>
                             <button type="button" class="portfolio-btn">All</button>
@@ -71,71 +71,89 @@
                     </ul>
                     <!--Row 1-->
                     <ul class="list card">
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-1.jpg" alt="App's interface" width="360" height="300" />
-                                <h2 class="general-section-title">Banking App Interface Concept</h2>
-                                <p class="section-text">App</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Banking App Interface Concept</h2>
+                                    <p class="section-text">App</p>
+                                </div>
                             </a>
                         </li>
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-2.jpg" alt="Phone payment" width="360" height="300" />
-                                <h2 class="general-section-title">Cashless Payment</h2>
-                                <p class="section-text">Marketing</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Cashless Payment</h2>
+                                    <p class="section-text">Marketing</p>
+                                </div>
                             </a>
                         </li>
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-3.jpg" alt="Laptop and phone" width="360" height="300" />
-                                <h2 class="general-section-title">Meditation App</h2>
-                                <p class="section-text">App</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Meditation App</h2>
+                                    <p class="section-text">App</p>
+                                </div>
                             </a>
                         </li>
                         <!--Row 2-->
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-4.jpg" alt="Vehicle interior" width="360" height="300" />
-                                <h2 class="general-section-title">Taxi Service</h2>
-                                <p class="section-text">Marketing</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Taxi Service</h2>
+                                    <p class="section-text">Marketing</p>
+                                </div>
                             </a>
                         </li>
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-5.jpg" alt="Different illustrations in the phone" width="360"
                                     height="300" />
-                                <h2 class="general-section-title">Screen Illustrations</h2>
-                                <p class="section-text">Design</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Screen Illustrations</h2>
+                                    <p class="section-text">Design</p>
+                                </div>
                             </a>
                         </li>
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-6.jpg" alt="The girl in headphones" width="360" height="300" />
-                                <h2 class="general-section-title">Online Courses</h2>
-                                <p class="section-text">Marketing</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Online Courses</h2>
+                                    <p class="section-text">Marketing</p>
+                                </div>
                             </a>
                         </li>
                         <!--Row 3-->
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-7.jpg" alt="Different layouts" width="360" height="300" />
-                                <h2 class="general-section-title">Instagram Stories Concept</h2>
-                                <p class="section-text">Design</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Instagram Stories Concept</h2>
+                                    <p class="section-text">Design</p>
+                                </div>
                             </a>
                         </li>
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-8.jpg" alt="The person with a bag  of fruits and vegetables"
                                     width="360" height="300" />
-                                <h2 class="general-section-title">Organic Food</h2>
-                                <p class="section-text">Web Site</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Organic Food</h2>
+                                    <p class="section-text">Web Site</p>
+                                </div>
                             </a>
                         </li>
-                        <li>
+                        <li class="card-li">
                             <a href="" class="link">
                                 <img src="./images/page-2/img-9.jpg" alt="Barista is making coffee" width="360" height="300" />
-                                <h2 class="general-section-title">Fresh Coffee</h2>
-                                <p class="section-text">Web Site</p>
+                                <div class="container-portfolio">
+                                    <h2 class="general-section-title app-title">Fresh Coffee</h2>
+                                    <p class="section-text">Web Site</p>
+                                </div>
                             </a>
                         </li>
                     </ul>
