--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <nav class="header-nav">
                     <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
                     <ul class="list header-link">
-                        <li>
+                        <li class="nav-li">
                             <a href="./index.html" class="nav-link link">Studio</a>
                         </li>
-                        <li>
+                        <li class="nav-li">
                             <a href="./portfolio.html" class="nav-link link">Portfolio</a>
                         </li>
-                        <li>
+                        <li class="nav-li">
                             <a href="" class="nav-link link">Contacts</a>
                         </li>
                     </ul>
