--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!--What are we doing-->
             <section class="main-what-section">
                 <div class="container">
-                    <h2 id="portfolio" class="section-what-title">What are we doing</h2>
+                    <h2 class="section-what-title">What are we doing</h2>
                     <ul class="list section-what section">
                         <li class="what-li">
                             <img src="./images/portfolio/img-1.jpg" width="360" height="300" alt="PC monitor" />
@@ -113,7 +113,7 @@
             <!--Team-->
             <section class="section-team">
                 <div class="container">
-                    <h2 id="team" class="section-team-title">Our Team</h2>
+                    <h2 class="section-team-title">Our Team</h2>
                     <ul class="list team-section section">
                         <li class="team-back team-li">
                             <img src="./images/team/img-1.jpg" width="264" height="260" alt="The fist member of team" />
