--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!--Header section-->
         <header class="header">
-            <div class="container">
+            <div class="header-container container">
                 <nav class="header-nav">
                     <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
                     <ul class="list header-link">
