--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <!--Header section-->
+    <div class="page-container">
         <header class="header">
             <div class="header-container container">
                 <nav class="header-nav">
@@ -37,7 +38,7 @@
                         </li>
                     </ul>
                     <address class="address">
-                        <ul class="header-address list">
+                        <ul class="list header-address">
                             <li>
                                 <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
                             </li>
@@ -156,5 +157,6 @@
                 </p>
             </div>
         </footer>
+    </div>
 </body>
 </html>
