--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 <body class="body">
     <div class="page-container">
         <header class="header">
-            <div class="container">
+            <div class="header-container container">
                 <nav class="header-nav">
                     <a href="./index.html" class="logo link">Web<span class="studio">Studio</span></a>
                     <ul class="list header-link">
