--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
                     </ul>
                 </nav>
                 <address class="address">
-                    <ul class="list header-address">
-                        <li>
-                            <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
-                        </li>
-                        <li>
-                            <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
-                        </li>
-                    </ul>
+                    <div class="address-container">
+                        <ul class="list header-address">
+                            <li>
+                                <a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
+                            </li>
+                        </ul>
+                    </div>
                 </address>
             </div>
         </header>
