--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <section class="features-section">
                 <div class="container">
                     <h2 class="visually-hidden">Features</h2>
-                    <ul class="list section-features section">
+                    <ul class="list section-features">
                         <li class="features-li">
                             <h3 class="general-section-title">Strategy</h3>
                             <p class="section-text">
@@ -115,7 +115,7 @@
             <section class="section-team">
                 <div class="container">
                     <h2 class="section-team-title">Our Team</h2>
-                    <ul class="list team-section section">
+                    <ul class="list team-section">
                         <li class="team-back team-li">
                             <img src="./images/team/img-1.jpg" width="264" height="260" alt="The fist member of team" />
                             <div class="container-team">
